# 05_lab_works

./: .travis.yml  CMakeLists.txt  README.md  Уязвимости форматной строки.cpp
LR_1/: Переполнение буфера.cpp  Уязвимости форматной строки.cpp
LR_2/Dynamic/: CMakeLists.txt  Source.cpp
LR_2/Static/: CMakeLists.txt  Node.cpp  Node.h  Source.cpp
